compiler/tests/fail/asmgen/x86-64/too_large_immediate.jazz
export fn main () -> reg u64 {
  reg u64 res;
  stack u64 s;
  s = 10000000000;
  res = s;
  return res;
}
